--- a/CapitalSix.AspNetCore.Swagger.Xml.csproj
+++ b/CapitalSix.AspNetCore.Swagger.Xml.csproj
@@ -6,7 +6,7 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Title>AspNetCore middleware for generic error handling</Title>
+        <Title>Swagger filter for handling XML annotation attributes correctly in AspNetCore.</Title>
         <RepositoryUrl>https://github.com/sixpaq/capitalsix.aspnetcore.swagger.xml</RepositoryUrl>
         <RepositoryType>git</RepositoryType> 
         <Authors>Mike Wijnen</Authors>
@@ -17,7 +17,7 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <License>none</License>
         <Description>This module corrects the XML handling in Swagger in AspNetCore. The default Swagger implementation does not handle XML annotation attributes correctly. This module handles XmlRoot, XmlElement and XmlIgnore attributes in data models.</Description>
-        <PackageTags>dotnet-new;swagger;xml;attributes</PackageTags>
+        <PackageTags>aspnetcore;swagger;xml;attributes;schema;filter</PackageTags>
         <IncludeContentInPack>true</IncludeContentInPack>
         <IncludeBuildOutput>true</IncludeBuildOutput>
         <ContentTargetFolders>content</ContentTargetFolders>
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CapitalSix.AspNetCore.Swagger.AutoResponse" Version="1.0.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
       <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.3.0" />
     </ItemGroup>
